// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Base/Button Primary 1`] = `
<button
  class="btn"
>
  asd
</button>
`;

exports[`Storyshots Example/Button Large 1`] = `
<button
  type="button"
/>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<div
  class="flex flex-row items-center space-x-4 w-100 justify-between shadow-md p-3"
>
  <div
    class="flex flex-row items-center"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-check fa-w-16 text-green-500 mr-2"
      data-icon="check"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        fill="currentColor"
      />
    </svg>
    <label
      class="inline-flex items-center"
      for="task-1-title"
    >
      <input
        class="form-input"
        id="task-1-title"
        placeholder="Input title"
        readonly=""
      />
       
    </label>
  </div>
  <!--v-if-->
</div>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  type="button"
/>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  type="button"
/>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<button
  type="button"
/>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<div
  user="[object Object]"
/>
`;

exports[`Storyshots Example/Page Logged In 1`] = `<div />`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article
  user="[object Object]"
/>
`;

exports[`Storyshots Tasks/TaskItem Archived 1`] = `
<div
  class="flex flex-row items-center space-x-4 w-100 justify-between shadow-md p-3"
>
  <div
    class="flex flex-row items-center"
  >
    <label
      class="inline-flex items-center"
      for="task-1-checked"
    >
      <input
        class="mr-2 form-checkbox border rounded text-indigo-600"
        disabled=""
        id="task-1-checked"
        name="checked"
        type="checkbox"
      />
       
    </label>
    <label
      class="inline-flex items-center"
      for="task-1-title"
    >
      <input
        class="form-input"
        id="task-1-title"
        placeholder="Input title"
        readonly=""
      />
       
    </label>
  </div>
  <button>
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-star fa-w-18 text-yellow-500"
      data-icon="star"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots Tasks/TaskItem Default 1`] = `
<button
  class="btn"
>
  asd
</button>
`;

exports[`Storyshots Tasks/TaskItem Pinned 1`] = `
<div
  class="flex flex-row items-center space-x-4 w-100 justify-between shadow-md p-3"
>
  <div
    class="flex flex-row items-center"
  >
    <label
      class="inline-flex items-center"
      for="task-1-checked"
    >
      <input
        class="mr-2 form-checkbox border rounded text-indigo-600"
        disabled=""
        id="task-1-checked"
        name="checked"
        type="checkbox"
      />
       
    </label>
    <label
      class="inline-flex items-center"
      for="task-1-title"
    >
      <input
        class="form-input"
        id="task-1-title"
        placeholder="Input title"
        readonly=""
      />
       
    </label>
  </div>
  <button>
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-star fa-w-18 text-gray-200"
      data-icon="star"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class=""
        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;
